--- a/styles.css
+++ b/styles.css
@@ -91,3 +91,37 @@ header .logo {
   font-size: 16vw;
   text-shadow: 0 20px 30px rgba(0, 0, 0, 0.2);
 }
+.navigation {
+  position: absolute;
+  top: 0;
+  left: -100%;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: var(--white);
+  z-index: 4;
+  transition: 0.5s;
+}
+.navigation li {
+  list-style: none;
+}
+.navigation li a {
+  display: inline-flex;
+  margin: 5px 0;
+  font-size: 1.35em;
+  text-decoration: none;
+  color: var(--black);
+  padding: 5px 20px;
+  border-radius: 30px;
+}
+.navigation li a:hover {
+  color: var(--white);
+  background: var(--black);
+}
+
+.navigation.active {
+  left: 0;
+}
