--- a/styles.css
+++ b/styles.css
@@ -159,3 +159,16 @@ header .logo {
   color: var(--black);
   font-size: 1.75em;
 }
+@media (max-width: 768px) {
+  header {
+    padding: 20px;
+  }
+  .copyrightText {
+    left: 20px;
+    bottom: 30px;
+  }
+  .sci {
+    right: 20px;
+    bottom: 20px;
+  }
+}
